name:                hDHT
version:             0.1
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Greg Skoczek
maintainer:          gregory.skoczek@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     DHT.Node
                     , DHT.Bencode
                     , DHT.KBucket
                     , DHT.API
                     , DHT.Messages
                     , DHT.TokenBucket
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.7 && <4.8
                     , bytestring >=0.10.4.0
                     , containers >=0.5.5.1
                     , parsec >=3.1.5
                     , network >= 2.5.0.0
                     , natural-numbers >= 0.1.2.0
                     , time >= 1.4.2
  default-language:    Haskell2010

Executable hDHT 
  Build-Depends:       hDHT
  Main-Is:             Main.hs
  Hs-Source-Dirs:      .
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , containers
                     , bytestring
                     , network
                     , parsec
  default-language:    Haskell2010

Test-suite reference
  main-is:             TestMain.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , hDHT 
                     , HUnit
                     , QuickCheck
                     , test-framework
                     , test-framework-quickcheck2
                     , test-framework-hunit
                     , bytestring >= 0.10.4.0
                     , containers >=0.5.5.1
  default-language:    Haskell2010
