name:                hDHT
version:             0.2
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.18

library
  hs-source-dirs:      library
  exposed-modules:     DHT.Node
                     , DHT.Bencode
                     , DHT.KBucket
                     , DHT.Messages
                     , DHT.TokenBucket
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , bytestring
                     , containers
                     , attoparsec
                     , binary
                     , network 
                     , time
  default-language:    Haskell2010

Executable hDHT 
  Main-Is:             Main.hs
  Hs-Source-Dirs:      executable
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , hDHT
                     , containers
                     , bytestring
                     , network
                     , binary
                     , attoparsec
  default-language:    Haskell2010

test-suite test-suite
  main-is:             TestMain.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-suite
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , hDHT
                     , HUnit
                     , QuickCheck
                     , test-framework
                     , test-framework-quickcheck2
                     , test-framework-hunit
                     , bytestring >= 0.10.4.0
                     , containers >=0.5.5.1
  default-language:    Haskell2010
